--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Slidershow</title>
-    <base href="/">
+    <!-- <base href="/"> -->
 
-    <base href="/">
+    <base href="/job_search/">
+    <base src="/job_search/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
